# fasttensor

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  b  clang-format.cmake  cm  rep  t
bench/: CMakeLists.txt  bench.cpp  timer.h
fasttensor/: Assign.hpp  CMakeLists.txt  CWiseBinaryOp.hpp  DefaultDevice.hpp  Device.hpp  DeviceFactory.hpp  DeviceProperties.hpp  GpuDevice.hpp  GpuDeviceFunction.hpp  Memory.hpp  RefSelector.hpp  StorageUnwrapper.hpp  Tensor.hpp  TensorExpression.fwd.hpp  TensorExpression.hpp  TensorStorage.hpp  TensorStorageRef.hpp  UnrollUtils.hpp
fasttensor/Simd/: Avx2.hpp  Generic.hpp  Simd.hpp  SimdMacros.hpp
fasttensor/Transforms/: GetCoeff.hpp  GetPacket.hpp
tests/: CMakeLists.txt  cwiseops.cpp  test.cpp
